--- a/src/app/components/table-pokemon/table-pokemon.component.html
+++ b/src/app/components/table-pokemon/table-pokemon.component.html
@@ -1,37 +1,11 @@
-<form fxLayout="row" fxLayoutAlign="center center">
-  <mat-form-field appearance="fill">
-    <mat-label>Seleccione la generación a filtrar</mat-label>
-    <mat-select name="selectGeneration">
-      <mat-option value="1">Generación 1</mat-option>
-      <mat-option value="2">Generación 2</mat-option>
-      <mat-option value="3">Generación 3</mat-option>
-      <mat-option value="4">Generación 4</mat-option>
-      <mat-option value="5">Generación 5</mat-option>
-      <mat-option value="6">Generación 6</mat-option>
-      <mat-option value="7">Generación 7</mat-option>
-      <mat-option value="8">Generación 8</mat-option>
-    </mat-select>
-  </mat-form-field>
-  <button mat-raised-button color="primary">Filtrar datos</button>
-  <button mat-raised-button color="accent">Descargar informe</button>
-</form>
-
-
-
-<div class="container">
-
-
-
-  <mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label>
-    <input
-      matInput
-      (keyup)="applyFilter($event)"
-      placeholder="Ex. Mia"
-      #input
-    />
-  </mat-form-field>
-
+<div class="container" fxLayout="row">
+  <div fxLayout="column" fxLayoutAlign ="center center" fxFlex.sm="100"fxFlex.md="100"  fxFlex.lg="30" fxFlex.xl="30">
+    <div style="width: 100%;"fxLayout="column" fxLayoutAlign="center center">
+      <button mat-raised-button color="primary" (click)="getPokemons()" name="listar" style="width: 100%;">Listar pokemon</button>
+      <button mat-raised-button color="accent"  (click)="processPokemons()"name="procesar" style="width: 100%;">Procesar archivo</button>
+    </div>
+  </div>
+<div fxLayout="column" fxLayoutAlign ="center center" fxFlex.sm="100" fxFlex.md="100" fxFlex.lg="70" fxFlex.xl="70" class="oculto">
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="datasource" matSort>
       <ng-container matColumnDef="id">
@@ -53,7 +27,20 @@
 
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipos</th>
-        <td mat-cell *matCellDef="let row">{{ row.type }}</td>
+        <td mat-cell *matCellDef="let row">
+                    <mat-chip-list
+            class="example-chip"
+            cdkDropList
+            cdkDropListOrientation="horizontal">
+            <mat-chip
+              class="example-box"
+              cdkDrag
+              *ngFor="let type of row.types; index as i"
+              class="{{row.types[i]}}">
+              {{row.types[i]}}
+            </mat-chip>
+          </mat-chip-list>
+        </td>
       </ng-container>
       <ng-container matColumnDef="weight">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Peso</th>
@@ -63,11 +50,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">
-          No data matching the filter "{{ input.value }}"
-        </td>
-      </tr>
     </table>
 
     <mat-paginator
@@ -75,4 +57,6 @@
       aria-label="Select page of users"
     ></mat-paginator>
   </div>
+</div>
+
 </div>
